qv2ray (2.7.2) unstable; urgency=medium

  * add: support reality for xray.

  -- nx111<gd.zhangdz@gmail.com>   Fri, 14 Jul 2023 08:45:49 +0800

qv2ray (2.7.1) unstable; urgency=medium

  * fix: configuration check for xray.
  * add: support uTLS fingerprint for TLS/XTLS.
  * update: split alpn text to h2 and http/1.1 checkbox.
  
  -- nx111<gd.zhangdz@gmail.com>  Thu, Nov 10 17:56:18 2022 +0800
  
qv2ray (2.7.0~pre1-1) unstable; urgency=medium

  * New upstream release 2.7.0-pre1

 -- Guobang Bi <ymshenyu@gmail.com>  Thu, 05 Nov 2020 10:15:00 +0800

qv2ray (2.7.0~alpha3-1) unstable; urgency=medium

  * New upstream release 2.7.0-alpha3
    * add: added connection template settings entry
    * fix: quit after a new version has been detected
    * update backend.cmake
    * 😢
    * fallback to pkgconfig if gRPC doesn't build by cmake
    * update build-qv2ray-cmake.yml
    * use find_package method to find gRPC for macOS
    * fix: remove h2 in ALPN
    * fix: fixed build
    * add: added importing all connections, closes #1003
    * fix: fixed build and cleanup
    * update: update Qv2rayApplicationInterface interface
    * fix: use TextChanged instead of IndexChanged
    * rebuild: trigger rebuild
    * version: bumped version suffix
    * updating translations!
    * fix: fixed disableSystemRoot option
    * fix: added updateColorScheme for DNSSettingsWidget

 -- Guobang Bi <ymshenyu@gmail.com>  Mon, 19 Oct 2020 10:08:20 +0800

qv2ray (2.7.0~alpha2-1) unstable; urgency=medium

  * New upstream release 2.7.0-alpha2

 -- Guobang Bi <ymshenyu@gmail.com>  Fri, 09 Oct 2020 10:56:01 +0800

qv2ray (2.7.0~alpha1-1) unstable; urgency=medium

  * New upstream release 2.7.0-alpha1
  	* see details on https://www.github.com/Qv2ray/Qv2ray

 -- Guobang Bi <ymshenyu@gmail.com>  Sat, 19 Sep 2020 21:58:53 +0800

qv2ray (2.6.3-1) unstable; urgency=medium

  * add: added support for VLESS
  * add: support collapse all groups in one click