@@ -858,7 +858,7 @@
       <attribute name="title">
        <string>TLS Settings</string>
       </attribute>
-      <widget class="QLabel" name="label_21">
+      <widget class="QLabel" name="labelSecurityType">
        <property name="geometry">
         <rect>
          <x>9</x>
@@ -968,7 +968,7 @@
         <string>Open Certificate Editor</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_9">
+      <widget class="QLabel" name="labelCerificates">
        <property name="geometry">
         <rect>
          <x>9</x>
@@ -994,7 +994,7 @@
         <string>Disable System Root Certificates</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_34">
+      <widget class="QLabel" name="labelUTLS">
        <property name="geometry">
         <rect>
          <x>9</x>
@@ -1057,7 +1057,7 @@
         </property>
        </item>
       </widget>
-      <widget class="QLabel" name="label_14">
+      <widget class="QLabel" name="labelALPN">
        <property name="geometry">
         <rect>
          <x>9</x>
@@ -1070,7 +1070,7 @@
         <string>ALPN</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_6">
+      <widget class="QLabel" name="labelServerName">
        <property name="geometry">
         <rect>
          <x>9</x>
@@ -1099,7 +1099,7 @@
         </sizepolicy>
        </property>
       </widget>
-      <widget class="QLabel" name="label_35">
+      <widget class="QLabel" name="labelPublicKey">
        <property name="geometry">
         <rect>
          <x>9</x>
@@ -1134,7 +1134,7 @@
         <locale language="English" country="UnitedStates"/>
        </property>
       </widget>
-      <widget class="QGroupBox" name="groupBox">
+      <widget class="QGroupBox" name="groupBoxALPN">
        <property name="geometry">
         <rect>
          <x>150</x>
@@ -1188,7 +1188,7 @@
         </property>
        </widget>
       </widget>
-      <widget class="QLabel" name="label_36">
+      <widget class="QLabel" name="labelShortId">
        <property name="geometry">
         <rect>
          <x>9</x>
@@ -1220,7 +1220,7 @@
         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;for reality&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_37">
+      <widget class="QLabel" name="labelSpiderX">
        <property name="geometry">
         <rect>
          <x>10</x>
