@@ -1,8 +1,9 @@
 qv2ray (2.7.2) unstable; urgency=medium
 
-  * add: support reality for xray.
+  * add: support realitySettings for xray.
+  * update: disable/enable some fields by security type.
 
-  -- nx111<gd.zhangdz@gmail.com>   Fri, 14 Jul 2023 08:45:49 +0800
+  -- nx111<gd.zhangdz@gmail.com>   Fri, 14 Jul 2023 11:04:49 +0800
 
 qv2ray (2.7.1) unstable; urgency=medium
 
